// Vitest Snapshot v1

exports[`TagInput > TagInput autoWidthVue demo works fine 1`] = `
<t-tag-input
  auto-width=""
  clearable=""
/>
`;

exports[`TagInput > TagInput baseVue demo works fine 1`] = `
<t-space
  direction="vertical"
  style="width: 80%;"
>
  <t-tag-input
    clearable=""
  />
  <t-tag-input
    clearable=""
    label="Controlled: "
    value="Vue,React2"
  />
  <t-tag-input
    clearable=""
    default-value="Vue,React3"
    input-value=""
    label="UnControlled: "
  />
</t-space>
`;

exports[`TagInput > TagInput collapsedVue demo works fine 1`] = `
<t-space
  direction="vertical"
  style="width: 80%;"
>
  <t-tag-input
    min-collapsed-num="1"
  />
  <t-tag-input
    collapsed-items="(_, {
        collapsedTags
      }) => h(__vite_ssr_import_0__.Tag, [\\"\\\\u66F4\\\\u591A(\\", collapsedTags.length, \\")\\"])"
    min-collapsed-num="2"
  />
  <t-tag-input
    min-collapsed-num="3"
  />
</t-space>
`;

exports[`TagInput > TagInput customTagVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tag-input
    clearable=""
    min-collapsed-num="2"
  />
  <t-tag-input
    clearable=""
  />
</t-space>
`;

exports[`TagInput > TagInput draggableVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tag-input
    clearable=""
    drag-sort=""
    placeholder="请输入"
  />
  <t-tag-input
    clearable=""
    drag-sort=""
    excess-tags-display-type="break-line"
    label="Controlled: "
    placeholder="请输入"
  />
</t-space>
`;

exports[`TagInput > TagInput excessVue demo works fine 1`] = `
<t-space
  direction="vertical"
  style="width: 80%;"
>
  <t-tag-input
    clearable=""
    label="Scroll: "
  />
  <t-tag-input
    clearable=""
    excess-tags-display-type="break-line"
    label="BreakLine: "
  />
</t-space>
`;

exports[`TagInput > TagInput maxVue demo works fine 1`] = `
<t-tag-input
  max="3"
  placeholder="最多只能输入 3 个标签"
  style="width: 80%;"
/>
`;

exports[`TagInput > TagInput sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  style="width: 80%;"
>
  <t-tag-input
    clearable=""
    size="small"
  />
  <t-tag-input
    clearable=""
  />
  <t-tag-input
    clearable=""
    size="large"
  />
</t-space>
`;

exports[`TagInput > TagInput statusVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      禁用状态：
    </label>
    <t-tag-input
      disabled=""
      value="Vue,React,Miniprogram"
    />
  </div>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      只读状态：
    </label>
    <t-tag-input
      readonly=""
      tips="这是普通文本提示"
      value="Vue,React,Miniprogram"
    />
  </div>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      成功状态：
    </label>
    <t-tag-input
      clearable=""
      status="success"
      tips="校验通过文本提示"
    />
  </div>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      告警状态：
    </label>
    <t-tag-input
      clearable=""
      status="warning"
      tips="校验不通过文本提示"
    />
  </div>
  <div
    class="t-tdesign-demo__tag-input"
  >
    <label>
      错误状态：
    </label>
    <t-tag-input
      clearable=""
      status="error"
      tips="校验存在严重问题文本提示"
    />
  </div>
</t-space>
`;

exports[`TagInput > TagInput themeVue demo works fine 1`] = `
<t-space
  direction="vertical"
>
  <t-tag-input
    placeholder="添加新标签"
    tag-props="[object Object]"
  />
  <t-tag-input
    placeholder="添加新标签"
    tag-props="[object Object]"
  />
  <t-tag-input
    placeholder="添加新标签"
    tag-props="[object Object]"
  />
  <t-tag-input
    placeholder="添加新标签"
    tag-props="[object Object]"
  />
</t-space>
`;
